// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`com.mgmtp.a12.widgets.filter-selector > filter-content 1`] = `
.c0 {
  box-shadow: rgba(22, 25, 29, 0.3) 0px 0px 20px 0px;
  display: flex;
  flex-direction: column;
  height: 100%;
  margin: 0px auto;
  outline: none;
}

.c0 .filter-selector__content-enter {
  max-height: 0px;
  transition: max-height 0.3s ease-out;
}

.c0 .filter-selector__content-exit {
  transition: height 0.3s ease-in;
  height: 0px !important;
}

.c1 {
  background-color: rgb(255, 255, 255);
  display: flex;
  flex-grow: 1;
  flex-shrink: 1;
  max-height: inherit;
  min-height: 244.4px;
}

<div
  aria-label="Filter container"
  class="c0 filter-selector"
  data-role="filter-selector"
  role="dialog"
>
  <div
    class="c1 filter-selector__body"
  />
</div>
`;

exports[`com.mgmtp.a12.widgets.filter-selector > rendering-action-bar 1`] = `
.c0 {
  align-items: center;
  box-sizing: border-box;
  border-bottom: 1px solid rgba(22, 25, 29, 0.22);
  display: flex;
  flex-wrap: wrap;
  min-height: 48px;
  padding: 8px 16px;
}

<div
  class="c0 filter-selector__action-bar testClass"
  data-role="filter-selector-action-bar"
  id="testId"
  style="background-color: red;"
>
  Sample Child
</div>
`;

exports[`com.mgmtp.a12.widgets.filter-selector > rendering-action-item 1`] = `
.c0 {
  margin: 0px 8px 0px 0px;
}

.c0:last-child {
  margin: 0px;
}

<div
  class="c0 filter-selector__action-element"
  data-role="filter-selector-action-element"
/>
`;

exports[`com.mgmtp.a12.widgets.filter-selector > rendering-content 1`] = `
.c5 {
  align-items: center;
  background-color: rgb(78, 89, 101);
  box-sizing: border-box;
  border-bottom: 1px solid rgba(22, 25, 29, 0.22);
  border-top: 1px solid rgba(255, 255, 255, 0.32);
  display: flex;
  font-size: 1rem;
  line-height: 1.45;
  min-height: 48px;
  padding: 0px 24px;
  position: relative;
  border-radius: 0px;
  gap: 8px;
}

.StyledMasterDetailLayoutView-itBzGI .c5.c5 {
  padding: 0px 24px;
}

.c3 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  flex: 1 0 auto;
}

.c0 {
  background-color: rgb(255, 255, 255);
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-size: 0.75rem;
  font-family: "Open Sans", sans-serif;
  flex-direction: column;
  flex: 1 1 100%;
  height: 100%;
  line-height: 1.45;
  max-width: 100%;
  min-height: 0px;
  outline: transparent solid 1px;
  padding: 0px;
  box-shadow: rgba(22, 25, 29, 0.4) 0px 1px 2px 0px;
}

.c11 {
  box-sizing: border-box;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  font-size: 0.75rem;
  flex: 1 1 100%;
  min-height: 64px;
  overflow: hidden auto;
  background-color: rgb(255, 255, 255);
  padding: 0px 24px 24px;
}

.c11:focus {
  outline: rgb(51, 51, 51) dotted 1px;
}

[data-role="modal-overlay-content"] .c11.c11 {
  padding: 0px 24px 24px;
}

[data-role="modal-overlay-content"] [data-role="filter-selector-content-secondary"] .c11.c11 {
  padding: 16px;
}

.c9 {
  display: flex;
  flex-direction: column;
}

.c9 > :not(:empty):not(.sc-bRKDuR) {
  border-bottom: 1px solid rgba(22, 25, 29, 0.22);
  border-top: 1px solid transparent;
}

.c6 {
  align-items: center;
  display: flex;
  gap: 8px;
}

.c7 {
  flex: 1 1 0%;
  flex-direction: column;
  padding: 8px 0px;
}

.StyledMasterDetailLayoutPane-iBWYYD .c7.masterDetailLayoutPane--enter,
.StyledMasterDetailLayoutPane-iBWYYD .c7.masterDetailLayoutPane--exit {
  flex: 1 0 auto;
}

.c12 .c8 > :not(:empty) {
  display: flex;
  flex-direction: column;
  padding: 0px;
}

.c12 .c8 > :not(:empty):not(.sc-bRKDuR) {
  border-bottom-width: medium;
  border-bottom-style: none;
  border-bottom-color: currentcolor;
  border-top-width: medium;
  border-top-style: none;
  border-top-color: currentcolor;
}

.c12 .c4 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  padding: 8px 16px;
}

.c12 .c10 {
  border-radius: 0px;
  display: flex;
  flex-direction: column;
}

.c2 .c10 {
  padding: 0px;
}

.c13 .c1 {
  box-shadow: none;
  outline: 0px;
}

.c14 .c4 {
  border-right: 1px solid rgba(255, 255, 255, 0.12);
}

.c15:not(:first-child) .c4,
.c15:not(:first-child) .c8,
.c15:not(:first-child) .c10 {
  border-left: 1px solid rgba(22, 25, 29, 0.22);
}

.c15 .c10 {
  min-height: 48px;
}

<div
  class="c0 contentbox c1 c2 filter-selector__container testClass"
  data-role="contentbox"
  id="testId"
  style="background-color: red;"
  tabindex="-1"
>
  <div
    class="c3 contentbox__header"
    data-role="contentbox-header"
  >
    <div
      class="c4 c5 contentbox__heading"
      data-role="contentbox-heading"
      id="testId--heading"
    >
      <div
        class="c6 contentbox__addon-prefix"
        data-role="contentbox-addon-prefix"
      >
        headingPrefixes
      </div>
      <div
        class="c7"
      >
        headingElements
      </div>
    </div>
    <div
      class="c8 c9 contentbox__subheading"
      data-role="contentbox-subheading"
      id="testId--subheading"
    >
      subActionBar
    </div>
  </div>
  <div
    class="c10 c11 contentbox__content contentbox__content--initial-padding"
    data-role="contentbox-content"
  >
    Sample Child
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.filter-selector > rendering-content-with-header 1`] = `
.c5 {
  align-items: center;
  background-color: rgb(78, 89, 101);
  box-sizing: border-box;
  border-bottom: 1px solid rgba(22, 25, 29, 0.22);
  border-top: 1px solid rgba(255, 255, 255, 0.32);
  display: flex;
  font-size: 1rem;
  line-height: 1.45;
  min-height: 48px;
  padding: 0px 24px;
  position: relative;
  border-radius: 0px;
  gap: 8px;
}

.StyledMasterDetailLayoutView-itBzGI .c5.c5 {
  padding: 0px 24px;
}

.c3 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  flex: 1 0 auto;
}

.c0 {
  background-color: rgb(255, 255, 255);
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-size: 0.75rem;
  font-family: "Open Sans", sans-serif;
  flex-direction: column;
  flex: 1 1 100%;
  height: 100%;
  line-height: 1.45;
  max-width: 100%;
  min-height: 0px;
  outline: transparent solid 1px;
  padding: 0px;
  box-shadow: rgba(22, 25, 29, 0.4) 0px 1px 2px 0px;
}

.c8 {
  box-sizing: border-box;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  font-size: 0.75rem;
  flex: 1 1 100%;
  min-height: 64px;
  overflow: hidden auto;
  background-color: rgb(255, 255, 255);
  padding: 0px 24px 24px;
}

.c8:focus {
  outline: rgb(51, 51, 51) dotted 1px;
}

[data-role="modal-overlay-content"] .c8.c8 {
  padding: 0px 24px 24px;
}

[data-role="modal-overlay-content"] [data-role="filter-selector-content-secondary"] .c8.c8 {
  padding: 16px;
}

.c6 {
  flex: 1 1 0%;
  flex-direction: column;
  padding: 8px 0px;
}

.StyledMasterDetailLayoutPane-iBWYYD .c6.masterDetailLayoutPane--enter,
.StyledMasterDetailLayoutPane-iBWYYD .c6.masterDetailLayoutPane--exit {
  flex: 1 0 auto;
}

.c9 .c4 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  padding: 8px 16px;
}

.c9 .c7 {
  border-radius: 0px;
  display: flex;
  flex-direction: column;
}

.c2 .c7 {
  padding: 0px;
}

.c10 .c1 {
  box-shadow: none;
  outline: 0px;
}

.c11 .c4 {
  border-right: 1px solid rgba(255, 255, 255, 0.12);
}

.c12 .c7 {
  min-height: 48px;
}

<div
  class="c0 contentbox c1 c2 filter-selector__container"
  data-role="contentbox"
  tabindex="-1"
>
  <div
    class="c3 contentbox__header"
    data-role="contentbox-header"
  >
    <div
      class="c4 c5 contentbox__heading"
      data-role="contentbox-heading"
    >
      <div
        class="c6"
      >
        sample header
      </div>
    </div>
  </div>
  <div
    class="c7 c8 contentbox__content contentbox__content--initial-padding"
    data-role="contentbox-content"
  />
</div>
`;

exports[`com.mgmtp.a12.widgets.filter-selector > rendering-filter-selector-item 1`] = `
.c1 {
  box-sizing: border-box;
  background-color: rgb(255, 255, 255);
  color: rgb(77, 77, 77);
  cursor: pointer;
  display: flex;
  flex-direction: column;
  position: relative;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  border-bottom: 1px solid rgb(226, 230, 233);
}

.c4 {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  flex-grow: 1;
  justify-content: flex-start;
  gap: 16px;
  min-height: 48px;
  outline: 0px;
  padding: 8px 16px;
}

.c4::before {
  content: "";
  inset: 0px;
  position: absolute;
  display: block;
}

.c4:focus::before {
  border: 2px solid rgb(213, 0, 117);
  margin: 1px;
  outline: rgb(51, 51, 51) dotted 1px;
}

.c6 {
  color: inherit;
  display: flex;
  flex: 1 1 auto;
  flex-direction: column;
  font-size: 0.875rem;
  font-weight: 400;
  position: relative;
}

.c7 .c3 {
  padding: 8px 16px 8px calc(56px);
}

.c8 .c0 {
  background: rgb(255, 255, 255);
}

.c8 .c0 .c3 {
  padding: 0px 16px;
}

.c9 .c0 {
  flex: 0 0 auto;
  -webkit-tap-highlight-color: transparent;
}

.c9 .c0:focus::before {
  outline: rgb(51, 51, 51) dotted 1px;
}

.c9 .c0::before,
.c9 .c0 .c3::before {
  bottom: 0px;
  content: "";
  display: block;
  left: 0px;
  position: absolute;
  right: 0px;
}

.c9 .c0 .c3::before {
  background-color: transparent;
  top: 0px;
}

.c9 .c3 {
  min-height: 48px;
}

.c9 .c5 {
  font-size: 0.75rem;
  line-height: normal;
  overflow: hidden;
}

.c2 {
  background: linear-gradient(to right, rgb(241, 242, 244) 48px, rgb(255, 255, 255) 48px);
}

.c2 .c3 {
  background: transparent;
}

@media (pointer: coarse) {
  .c4:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  .c4:active::before {
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c4:hover::before {
    border: 2px solid rgb(213, 0, 117);
  }

  .c4:hover > :not([data-role="list-item-graphic"]) {
    text-decoration: none;
  }
}

<li
  class="c0 c1 list-item c2"
  data-role="filter-selector-list-item"
>
  <div
    aria-disabled="false"
    class="c3 c4 list-item__content"
    data-role="list-item-content"
    role="button"
    tabindex="0"
  >
    <div
      class="c5 c6 list-item__text"
      data-role="list-item-text"
    >
      content
    </div>
  </div>
</li>
`;

exports[`com.mgmtp.a12.widgets.filter-selector > rendering-filter-selector-list 1`] = `
.c0 {
  background: rgb(255, 255, 255);
  font-family: "Open Sans", sans-serif;
  list-style-type: none;
  margin: 0px;
  padding: 0px;
}

.c1 {
  display: flex;
  flex: 1 1 auto;
  flex-direction: column;
  outline: none;
  overflow-y: auto;
}

<ul
  class="c0 list c1 filter-selector__list testClass"
  data-role="filter-selector-list"
  id="testId"
  style="background-color: red;"
  tabindex="-1"
/>
`;

exports[`com.mgmtp.a12.widgets.filter-selector > rendering-filter-selector-searchInput 1`] = `
.c7 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  display: none;
  margin: -1px !important;
}

.c7 * {
  width: 1px;
  height: 1px;
}

.c15 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Icons";
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c15 > span {
  display: inline-block;
}

.c15.c15 {
  max-width: unset;
}

.c17 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Icons Outlined";
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c17 > span {
  display: inline-block;
}

.c17.c17 {
  max-width: unset;
}

.c6 {
  color: rgb(77, 77, 77);
  display: inline-block;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  line-height: 1.45;
  text-transform: none;
  align-self: center;
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c6:empty {
  display: none;
}

.c6 * {
  width: 1px;
  height: 1px;
}

.c13 {
  align-items: center;
  border: 2px solid transparent;
  cursor: pointer;
  display: inline-flex;
  justify-content: center;
  font-family: "Open Sans", sans-serif;
  font-weight: 700;
  gap: 4px;
  outline: none;
  position: relative;
  text-transform: uppercase;
  vertical-align: middle;
  border-radius: 50%;
  flex-shrink: 0;
  font-size: 1.125rem;
  height: 2rem;
  min-height: 0px;
  padding: 0px;
  width: 2rem;
  background: transparent;
  color: rgb(5, 104, 174);
}

.c13 .c14 {
  user-select: none;
}

.c13 .c14 {
  color: inherit;
}

.c13 .c14 {
  font-size: inherit;
}

.c13:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: transparent;
  box-shadow: none;
  color: rgb(213, 0, 117);
  border: 2px solid rgb(213, 0, 117);
}

.h_inlineBlock.h_middleAlign .c13.c13 {
  display: block;
  height: auto;
  min-height: 0px;
}

.h_inlineBlock.h_middleAlign .c13.c13 > .c14 {
  display: block;
}

.c11 {
  align-items: center;
  background-color: transparent;
  display: flex;
  flex-shrink: 0;
  justify-content: center;
  min-width: 32px;
  margin-left: -12px;
}

.c11:last-child {
  border-bottom-right-radius: 0px;
  border-top-right-radius: 0px;
}

.c16 {
  align-items: center;
  background-color: transparent;
  display: flex;
  flex-shrink: 0;
  justify-content: center;
  min-width: 32px;
}

.c16:last-child {
  border-bottom-right-radius: 0px;
  border-top-right-radius: 0px;
}

.c10 {
  background-color: transparent;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  box-sizing: border-box;
  color: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  font-size: 100%;
  line-height: 1.45;
  outline: none;
  padding: 0px 12px;
  text-align: inherit;
  text-overflow: ellipsis;
  text-transform: inherit;
  min-width: 0px;
  width: 100%;
}

.c10::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c8 {
  background-color: rgb(241, 242, 244);
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  box-shadow: rgb(89, 102, 115) 0px 1px 0px 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  outline: transparent solid 1px;
  height: 32px;
}

.c8 .c12 {
  border-radius: 0px;
}

.c0 {
  overflow-wrap: break-word;
  word-break: break-word;
  flex-direction: column;
  display: flex;
  width: 100%;
}

.c0 .c1 {
  display: flex;
  width: 100%;
}

.c0 * {
  max-width: 100%;
}

.c4 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c4 .c5 {
  display: block;
  width: fit-content;
}

.c2 {
  display: inline-flex;
}

.c2 .c3 {
  flex: 1 1 160px;
  max-width: 100%;
}

.c9 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 0px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  width: 0px;
}

.c18 .c14 {
  user-select: none;
}

@media (pointer: coarse) {
  .c13:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c13:not(:disabled):hover {
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c13:hover {
    outline: transparent solid 1px;
  }
}

@media (pointer: coarse) {
  .c8:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: fine) {
  .c8:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

<div
  class="c0 field-wrapper field-wrapper--block filter-selector__search testClass"
  data-role="textline"
  style="background-color: red;"
>
  <div
    class="c1 c2 field__main"
  >
    <div
      class="c3 c4 field"
      data-role="textline-control"
    >
      <label
        class="c5 c6 label field__label -u-unseenButRead"
        data-role="textline-label"
        for="testId"
        id="testId-label"
      >
        <span
          class="c7 -u-unseenButRead"
          data-role="hidden-text"
        >
          placeholder
        </span>
      </label>
      <div
        class="c8 field__input"
        data-role="textline-input-wrapper"
      >
        <span
          class="c9 supported-unseen-span"
        />
        <input
          class="c10 field__text"
          data-role="textline-input"
          id="testId"
          placeholder="placeholder"
          type="text"
          value="value"
        />
        <span
          class="c9 supported-unseen-span"
        />
        <div
          class="c11 field__suffix field__suffix--first"
          data-role="textline-suffix-0"
        >
          <button
            class="c12 c13 button button--icon"
            data-role="button"
            data-type="icon"
            title=""
            type="button"
          >
            <i
              class="c14 c15 plasma-icon"
              data-role="plasma-icon"
            >
              <span
                aria-hidden="true"
              >
                clear
              </span>
            </i>
          </button>
        </div>
        <div
          class="c16 field__suffix"
          data-role="textline-suffix-1"
        >
          <i
            class="c14 c17 plasma-icon plasma-icon--outlined"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              search
            </span>
          </i>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.filter-selector > rendering-filter-selector-section 1`] = `
<li
  class="form__sectionTitle h_zeroMargin testClass"
  data-role="filter-selector-section"
  id="testId"
  style="background-color: red;"
>
  testSection
</li>
`;

exports[`com.mgmtp.a12.widgets.filter-selector > rendering-wrapper 1`] = `
.c6 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c6 * {
  width: 1px;
  height: 1px;
}

.c5 {
  align-items: center;
  box-sizing: border-box;
  background-color: rgb(241, 242, 244);
  border-bottom: 1px solid rgba(22, 25, 29, 0.22);
  border-radius: 0px;
  border-top: 1px solid rgba(22, 25, 29, 0.22);
  display: flex;
  flex-shrink: 0;
  gap: 16px;
  min-height: 48px;
  padding: 4px 24px;
}

.c0 {
  box-shadow: rgba(22, 25, 29, 0.3) 0px 0px 20px 0px;
  display: flex;
  flex-direction: column;
  height: 100%;
  margin: 0px auto;
  outline: none;
}

.c0 .filter-selector__content-enter {
  max-height: 0px;
  transition: max-height 0.3s ease-out;
}

.c0 .filter-selector__content-exit {
  transition: height 0.3s ease-in;
  height: 0px !important;
}

.c0 .c4 {
  padding: 8px 16px;
}

.c1 {
  background-color: rgb(255, 255, 255);
  display: flex;
  flex-grow: 1;
  flex-shrink: 1;
  max-height: inherit;
  min-height: 244.4px;
}

.c2 {
  color: rgb(77, 77, 77);
  max-height: 468px;
  outline: 0px;
  max-width: 248px;
  min-width: 248px;
}

.c3 {
  color: rgb(77, 77, 77);
  max-height: 468px;
  outline: 0px;
  min-width: 248px;
  width: 248px;
}

<div
  aria-label="Filter container"
  class="c0 filter-selector testClass"
  data-role="filter-selector"
  id="testId"
  role="dialog"
  style="background-color: red;"
>
  <div
    class="c1 filter-selector__body"
  >
    <div
      class="c2 filter-selector__content filter-selector__content--primary"
      data-role="filter-selector-content-primary"
      role="region"
    >
      <div
        class="sample-primary-content"
      />
    </div>
    <div
      aria-label="Filter option container"
      class="c3 filter-selector__content filter-selector__content--secondary"
      data-role="filter-selector-content-secondary"
      role="region"
    >
      <div
        class="sample-secondary-content"
      />
    </div>
  </div>
  <div
    class="filter-selector__footer"
    data-role="filter-selector-footer"
  >
    <div
      class="c4 c5 contentbox__footer"
      data-role="contentbox-footer"
    >
      <span
        aria-level="2"
        class="c6 -u-unseenButRead"
        data-role="hidden-text"
        role="heading"
      >
        Action Section
      </span>
      <div
        class="sample-footer-content"
      />
    </div>
  </div>
</div>
`;
